# REGI-GameBoy

./: .gitmodules  Docs.c  Docs.h  Doxyfile  Un1titled.xcf  Untitled.xcf  dino.xcf  palletete.xbm
Docs/: HSTX HDMI RGB565 - Changes needed to example_ - Raspberry Pi Forums.html
Firmware/: BootLoaderSplashScreen.xcf  REGI-CPP-Debugable.h  frame_4_delay-0.07s.h  frame_5_delay-0.07s.h  frame_5_delay-0.07s.xcf  palette.txt
Firmware/Waveshare ili9488 driver/Pico-ResTouch-LCD-X_X_Code/C/examples/: CMakeLists.txt  lcd_test.c
Hardware/: Revision Notes.txt
REGI-Pico-Wifi/: platformio.ini
docbook/: __ffconf_8h.xml  __ffconf_8h_source.xml  _a_p_i_8md.xml  _c_make_c_compiler_id_8c.xml  _c_make_c_compiler_id_8c_source.xml  _c_make_c_x_x_compiler_id_8cpp.xml  _c_make_c_x_x_compiler_id_8cpp_source.xml  _dino_game_8cpp.xml  _dino_game_8cpp__incl.md5  _dino_game_8cpp_source.xml  _dino_game_8h.xml  _dino_game_8h__dep__incl.md5  _dino_game_8h__incl.md5  _dino_game_8h_source.xml  _e_x_a_m_p_l_e_8md.xml  _free_r_t_o_s_config_8h.xml  _free_r_t_o_s_config_8h_source.xml  _game_8cpp.xml  _game_8cpp__incl.md5  _game_8h.xml  _game_8h__dep__incl.md5  _game_8h__incl.md5  _game_8h_source.xml  _game_scene_8cpp.xml  _game_scene_8cpp__incl.md5  _game_scene_8cpp_source.xml  _game_scene_8h.xml  _game_scene_8h__dep__incl.md5  _game_scene_8h__incl.md5  _game_scene_8h_source.xml  _l_i_c_e_n_s_e_8md.xml  _l_i_m_i_t_a_t_i_o_n_8md.xml  _s_t_a_n_d_a_r_d_8md.xml  _snake_game_8cpp.xml  _snake_game_8cpp__incl.md5  _snake_game_8cpp_source.xml  _snake_game_8h.xml  _snake_game_8h__dep__incl.md5  (+500 more)
(+2832 files in other folders)
